#2689 redesigned the filters and changed their logic on feed block, fixed partners & people blocks chrome layout bug

--- a/sites/all/themes/forgeweb/sass/base/_front-page.scss
+++ b/sites/all/themes/forgeweb/sass/base/_front-page.scss
@@ -488,10 +488,20 @@ only screen and (min-resolution: 192dpi) {
           height: 100%;
           vertical-align: middle;
         }
-        .short-desc__img,
+        > a > span,
         .short-desc__text {
           display: table-cell;
           vertical-align: middle;
+        }
+        > a > span,
+        .short-desc__img {
+          width: 120px;
+          @include at-breakpoint ($tab) {
+            width: 130px;
+          }
+          @include at-breakpoint ($desk) {
+            width: 230px;
+          }
         }
         h3,
         p {
